--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     implementation 'com.afollestad.material-dialogs:core:0.8.5.9'
     implementation 'com.github.chrisbanes:PhotoView:1.2.6'
     implementation 'commons-net:commons-net:3.6'
+    implementation 'com.pnikosis:materialish-progress:1.7'
 }
