--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,6 @@ dependencies {
     implementation 'commons-net:commons-net:3.6'
     implementation 'com.pnikosis:materialish-progress:1.7'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.1.17'
+    implementation 'com.github.billthefarmer:mididriver:v1.17'
+    implementation 'com.android.support:appcompat-v7:28.4.0'
 }
