--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.PlayList"></activity>
+        <activity android:name=".activity.PlayListList"></activity>
+        <activity android:name=".activity.PlayList" />
         <activity
             android:name=".activity.PlayListAcitivity"
             android:label="@string/title_activity_play_list_acitivity"
