--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.PlayListList"></activity>
+        <activity
+            android:name=".XMLPlaylist"
+            android:label="@string/title_activity_xmlplaylist"></activity>
+        <activity android:name=".activity.PlayListList" />
         <activity android:name=".activity.PlayList" />
         <activity
             android:name=".activity.PlayPianoActivity"
